# Dhaka

./: .env.template  .gitignore  CONTRIBUTING.md  DEPENDENCIES.md  DOCKER_MIGRATION.md  Dockerfile  Dockerfile.build  Dockerfile.prod  Dockerfile.test  INPUT_DEVICES.md  LICENSE  Makefile  README.md  REFACTOR_NOTES.md  SIMULATION_MODE.md  SYSTEM_OVERVIEW.md  SYSTEM_SETUP.md  TODO.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  hardware_test.py  install.sh  jetson_power.py  os_config.json  os_config.yaml  realtime_speech.py  requirements.txt  test_bt_provisioner.py
ros2_ws/src/brain/brain_client/: CMakeLists.txt  package.xml
ros2_ws/src/brain/brain_client/brain_client/: __init__.py  agent_loader.py  agent_types.py  brain_client_node.py  camera_provider.py  directive_loader.py  directive_types.py  gaze.py  head_interface.py  initializers.py  input_loader.py  input_manager_node.py  input_types.py  logging_config.py  manipulation_interface.py  message_types.py  mobility_interface.py  primitive_execution_action_server.py  primitive_loader.py  primitive_types.py  skill_loader.py  skill_types.py  skills_action_server.py  speed_test.py  training_job_tracker_node.py  tts_handler.py  ws_bridge.py  ws_client_node.py
ros2_ws/src/brain/brain_client/config/: logging.conf
ros2_ws/src/brain/brain_client/docs/: agent-skills-design.md
ros2_ws/src/brain/brain_client/launch/: brain_client.launch.py  brain_client.sim.launch.py  input_manager.launch.py  training_job_tracker.launch.py
ros2_ws/src/brain/brain_client/test/: test_skill_integration.launch.py
ros2_ws/src/brain/brain_client/tests/: test_pose_image_feature.py
ros2_ws/src/brain/brain_messages/: CMakeLists.txt  package.xml
ros2_ws/src/brain/brain_messages/action/: ExecuteBehavior.action  ExecutePolicy.action  ExecutePrimitive.action  ExecuteSkill.action
ros2_ws/src/brain/brain_messages/msg/: AvailableSkills.msg  RecorderStatus.msg  ReplayStatus.msg  SkillInfo.msg
ros2_ws/src/brain/brain_messages/srv/: ActivateManipulationTask.srv  CreatePhysicalSkill.srv  GetAvailableBehaviors.srv  GetAvailableDirectives.srv  GetAvailablePrimitives.srv  GetAvailableSkills.srv  GetChatHistory.srv  GetDatasetInfo.srv  LoadEpisode.srv  ManipulationTask.srv  ReloadSkillsAgents.srv  ResetBrain.srv  SaveMap.srv  SetDirectiveOnStartup.srv
ros2_ws/src/brain/innate_webrtc_streamer/: CMakeLists.txt  H264_DEBUGGING.md  package.xml
ros2_ws/src/brain/innate_webrtc_streamer/config/: webrtc_params.yaml
ros2_ws/src/brain/innate_webrtc_streamer/innate_webrtc_streamer/: __init__.py  webrtc_streamer.py  webrtc_streamer_node.py
ros2_ws/src/brain/innate_webrtc_streamer/launch/: webrtc_streamer.launch.py  webrtc_streamer_cpp.launch.py
ros2_ws/src/brain/innate_webrtc_streamer/src/: webrtc_streamer.cpp
ros2_ws/src/brain/manipulation/: CMakeLists.txt  package.xml
ros2_ws/src/brain/manipulation/config/: behaviors.yaml  recorder.yaml  visualizer.rviz
ros2_ws/src/brain/manipulation/launch/: behavior.launch.py  recorder.launch.py  recorder_cpp.launch.py  visualizer.launch.py
ros2_ws/src/brain/manipulation/manipulation/: ACT.py  DataUtils.py  DataUtils.py.py  TestPublisher.py  behavior_server.py  episode_data.py  manipulation_server.py  policy.py  policyViT.py  recorder.py  recorder_interface.py  test.py  trajectory.py  visualizer.py
ros2_ws/src/brain/manipulation/src/: episode_data.cpp  recorder_main.cpp  recorder_node.cpp  task_manager.cpp
ros2_ws/src/brain/voice_client/: CMakeLists.txt  package.xml
ros2_ws/src/brain/voice_client/launch/: voice_client.launch.py
ros2_ws/src/brain/voice_client/voice_client/: voice_client_node.py
ros2_ws/src/brain_client/: CMakeLists.txt  package.xml
ros2_ws/src/brain_client/brain_client/: brain_client_node.py  message_types.py  nav2_test.py  navigation_node.py  primitive_execution_action_server.py  ws_bridge.py  ws_client.py  ws_client_node.py
ros2_ws/src/brain_client/brain_client/directives/: types.py
ros2_ws/src/brain_client/brain_client/primitives/: navigate_to_position.py  types.py  wrappers.py
ros2_ws/src/brain_client/launch/: brain_client.launch.py
ros2_ws/src/brain_messages/: CMakeLists.txt  package.xml
ros2_ws/src/brain_messages/action/: ExecutePrimitive.action
ros2_ws/src/brain_messages/srv/: GetChatHistory.srv
ros2_ws/src/cloud/innate_cloud_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/cloud/innate_cloud_msgs/action/: NavigateInstruction.action
ros2_ws/src/cloud/innate_cloud_msgs/msg/: TrainingJobList.msg  TrainingParams.msg  TrainingRunStatus.msg  TrainingSkillStatus.msg  TransferProgress.msg
ros2_ws/src/cloud/innate_cloud_msgs/srv/: ActivateRun.srv  CreateRun.srv  DownloadResults.srv  GetTrainingStatus.srv  SubmitSkill.srv  UploadSkill.srv
ros2_ws/src/cloud/innate_uninavid/: .gitignore  PROTOCOL.md  package.xml  setup.py  simulate.py
ros2_ws/src/cloud/innate_uninavid/config/: params.yaml
ros2_ws/src/cloud/innate_uninavid/innate_uninavid/: node.py  ws_client.py
ros2_ws/src/cloud/innate_uninavid/launch/: uninavid.launch.py
ros2_ws/src/cloud_clients/innate_training_node/: package.xml
ros2_ws/src/cloud_clients/innate_training_node/innate_training_node/: job_store.py  node.py  workers.py
ros2_ws/src/cloud_clients/innate_training_node/test/: test_training_node.py
ros2_ws/src/maurice_bot/maurice_arm/: CMakeLists.txt  package.xml
ros2_ws/src/maurice_bot/maurice_arm/config/: arm_config.yaml  moveit.yaml  pid_tuning.yaml
ros2_ws/src/maurice_bot/maurice_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/maurice_bot/maurice_bt_provisioner/: CMakeLists.txt  package.xml  pytest.ini
ros2_ws/src/maurice_bot/maurice_cam/: CMakeLists.txt  H264_DEBUGGING.md  package.xml
ros2_ws/src/maurice_bot/maurice_control/: CMakeLists.txt  README_HEALTH_MONITOR.md  package.xml
ros2_ws/src/maurice_bot/maurice_head/: CMakeLists.txt  package.xml
ros2_ws/src/maurice_bot/maurice_log/: CMakeLists.txt  package.xml
ros2_ws/src/maurice_bot/maurice_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/maurice_bot/maurice_nav/: CMakeLists.txt  package.xml
(+486 files in other folders)
