<?xml version="1.0"?>
<package format="3">
  <name>brain_client</name>
  <version>0.1.0</version>
  <description>A ROS 2 package for bridging to a cloud agent via WebSocket.</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- Required build tools for Python packages -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies your node uses at runtime -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <export>
    <!-- The critical line for a pure-Python package: -->
    <build_type>ament_cmake</build_type>
  </export>
</package>
