<?xml version="1.0"?>
<package format="3">
  <name>brain_client</name>
  <version>0.1.0</version>
  <description>A ROS 2 package for bridging to a cloud agent via WebSocket.</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- Required build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <!-- Core ROS dependencies -->
  <depend>rclpy</depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- Message dependencies -->
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>action_msgs</depend>

  <!-- TF dependencies -->
  <depend>tf2_ros</depend>

  <!-- Internal package dependencies -->
  <depend>brain_messages</depend>
  <depend>maurice_bringup</depend>
  <depend>maurice_msgs</depend>

  <!-- Python dependencies (installed via pip-requirements.txt) -->

  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
