<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>innate_webrtc_streamer</name>
  <version>0.1.0</version>
  <description>WebRTC video streaming for low-latency H.264 video delivery to clients</description>
  
  <maintainer email="robot@innate.com">Innate Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS2 dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>

  <!-- Python dependencies (installed via pip, but declared for reference) -->
  <!-- pygobject (for GStreamer Python bindings) -->
  <!-- opencv-python (via cv_bridge) -->
  <!-- numpy -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

