<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>innate_webrtc_streamer</name>
  <version>0.1.0</version>
  <description>WebRTC video streaming for low-latency VP8 video delivery to clients</description>
  
  <maintainer email="robot@innate.com">Innate Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS2 C++ dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <!-- System dependencies -->
  <build_depend>libopencv-dev</build_depend>
  <build_depend>libgstreamer1.0-dev</build_depend>
  <build_depend>libgstreamer-plugins-base1.0-dev</build_depend>
  <build_depend>gstreamer1.0-plugins-good</build_depend>
  <build_depend>gstreamer1.0-plugins-bad</build_depend>
  <build_depend>gstreamer1.0-nice</build_depend>
  <build_depend>nlohmann-json3-dev</build_depend>

  <!-- Python/GStreamer dependencies (installed via apt-dependencies.txt) -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

