<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>manipulation</name>
  <version>0.0.0</version>
  <description>Manipulation, behavior recording and policy execution for Maurice robot</description>
  <maintainer email="vignesh.anand.1503@gmail.com">vignesh</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core ROS dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- Message dependencies -->
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <!-- Image/CV dependencies -->
  <depend>cv_bridge</depend>

  <!-- TF dependencies -->
  <depend>tf2_ros</depend>

  <!-- Internal package dependencies -->
  <depend>brain_messages</depend>
  <depend>maurice_msgs</depend>

  <!-- Python dependencies (installed via pip-requirements.txt) -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
