<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>manipulation</name>
  <version>0.0.0</version>
  <description>Manipulation, behavior recording and policy execution for Maurice robot</description>
  <maintainer email="vignesh.anand.1503@gmail.com">vignesh</maintainer>
  <license>TODO: License declaration</license>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS core -->
  <depend>rclcpp</depend>
  <depend>tf2_ros</depend>

  <!-- ROS messages -->
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <!-- Internal packages -->
  <depend>brain_messages</depend>
  <depend>maurice_msgs</depend>

  <!-- Image processing -->
  <depend>cv_bridge</depend>

  <!-- External libraries (build) -->
  <build_depend>libhdf5-dev</build_depend>
  <build_depend>libopencv-dev</build_depend>
  <build_depend>nlohmann-json-dev</build_depend>

  <!-- External libraries (runtime) -->
  <exec_depend>libhdf5-103-1</exec_depend>

  <!-- Python runtime -->
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <!-- Testing -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
