<?xml version="1.0"?>
<package format="3">
  <name>voice_client</name>
  <version>0.1.0</version>
  <description>Always-on microphone client that streams audio to OpenAI Realtime and publishes transcripts to /chat_in.</description>
  <maintainer email="maintainer@example.com">maintainer</maintainer>
  <license>Apache-2.0</license>

  <!-- Required build tools for Python packages -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <!-- Dependencies your node uses at runtime -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
