<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>innate_uninavid</name>
  <version>0.1.0</version>
  <description>ROS 2 node that bridges compressed camera images to a cloud websocket and publishes cmd_vel in response.</description>
  <maintainer email="eng@innate.bot">Innate Engineering</maintainer>
  <license>Proprietary</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>innate_cloud_msgs</depend>
  <depend>cloud_clients</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
