<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>maurice_arm</name>
  <version>0.0.0</version>
  <description>Camera driver and arm control for Maurice robot</description>
  <maintainer email="your-email@example.com">Your Name</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>python3-dynamixel-sdk</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>moveit_py</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>kdl_parser_py</exec_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>cv_bridge</depend>
  <depend>libopencv-dev</depend>
  <depend>dynamixel_sdk</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>